update team details

--- a/templates/team.html
+++ b/templates/team.html
@@ -13,19 +13,11 @@
             <div class="card">
                 <img src='{{ url_for('static' , filename ='images/rkt.jpeg')}}'>
                 <div class="text">
-                    <h4>Ratnesh Kumar Tiwari</h4>
-                    <ul>
-                        <li>  <a target="_blank" href="https://www.instagram.com/r_k_t4193/"><i class="fa fa-instagram"></i></a></li>
-                         <li> <a target="_blank" href="https://www.facebook.com/ratneshtiwari4193/"><i class="fa fa-facebook"></i></a></li>
-                          <li><a target="_blank" href="https://github.com/Ratnesh4193"><i class="fa fa-github"></i></a></li>
-                          <li><a target="_blank" href="https://www.linkedin.com/in/ratnesh-kumar-tiwari-867b521a6"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
                 </div>
             </div>
         </div>
         <div class="try">
         <div class="card">
-            <img src='{{ url_for('static' , filename ='images/ss.jpeg')}}'>
             <div class="text">
                 <h4>Sanskar Srivastava</h4>
                 <ul>
@@ -39,15 +31,12 @@
     </div>
     <div class="try">
         <div class="card">
-            <img src='{{ url_for('static' , filename ='images/rs.jpeg')}}'>
             <div class="text">
-                <h4>Rupal Singh</h4>
+                <h4>Sachin Pund</h4>
                 <ul>
-                    <li><a target="_blank" href="https://www.instagram.com/rupalsingh63/"><i class="fa fa-instagram"></i></a></li>
-                     <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100037512309829"><i class="fa fa-facebook"></i></a></li>
-                      <li><a target="_blank" href="https://github.com/rupal121"><i class="fa fa-github"></i></a></li>
-                      <li><a target="_blank" href="https://www.linkedin.com/in/rupal-singh-40b3001a8/"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
+                      <li><a target="_blank" href="https://github.com/Sachinpund27/"><i class="fa fa-github"></i></a></li>
+                      <li><a target="_blank" href="https://www.linkedin.com/in/sachin-pund-a53642334/"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
             </div>
         </div>
     </div>
